fix projects on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -260,7 +260,7 @@ a:focus {
 }
 
 .main-heading {
-  font-size: var(--fontSize-3);
+  font-size: var(--fontSize-2);
   color: gray !important;
   margin: 0;
   padding: 0 8px 0;
@@ -268,6 +268,7 @@ a:focus {
 
 .main-heading#page {
   font-size: var(--fontSize-2);
+  padding: 0 4px 0;
 }
 
 .post-list-item {
@@ -411,6 +412,10 @@ hr {
     margin-left: var(--spacing-0);
   }
 
+  .hidden-column-mobile {
+    display: none;
+  }
+  
   ul,
   ol {
     list-style-position: inside;
